# rhai-merge-module-bug

./: Cargo.toml  README.md
src/: main.rs
src/api/: script1.rhai  script2.rhai
user/: script3.rhai  user_module.rhai
