[package]
name = "rhai-merge-module-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.7.0", git = "https://github.com/schungx/rhai", rev = "5435fdb8c8b4875149e5e9d8cbd8b34eb4988e82", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
] }

# rhai = { version = "1.7.0", features = [
#     "unchecked",
#     "sync",
#     "internals",
#     "no_closure",
# ] }
